--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/libs/utils",
-    "ui": "@/components/ui",
+    "ui": "@/components/common/ui",
     "lib": "@/libs",
     "hooks": "@/hooks"
   },
