--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "fmt": "prettier --check \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,json,lintstagedrc,yml,yaml}\"",
-    "fmt:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,json,lintstagedrc,yml,yaml}\"",
+    "fmt": "prettier --check \"**/*.{ts,tsx,js,jsx,cjs,mjs,json,lintstagedrc,yml,yaml}\"",
+    "fmt:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,json,lintstagedrc,yml,yaml}\"",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
@@ -36,6 +36,7 @@
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-auth": "5.0.0-beta.29",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
