--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@next/third-parties": "^15.3.5",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
